@@ -121,7 +121,7 @@
 
 % newline, and indentation 
 %BEGIN LATEX
-\newcommand{\ocweol}{\setlength\parskip{0pt}\par}
+\newcommand{\ocweol}{\setlength\parskip{0pt}\par\nopagebreak}
 \newcommand{\ocwindent}[1]{\noindent\kern#1}
 %END LATEX
 %HEVEA\newcommand{\ocweol}{\begin{rawhtml}<BR>\end{rawhtml}}
